Removed Nav bar

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
     </head>
     <body>
-         <hr class="abvnav">
+<!--          <hr class="abvnav">
 
         <div class="navbar">
             <span><h1 class="test">Test Website</h1></span>
         <span class="navAbout">About</span><span class="navWork">  Work</span><span class="navNotes">Notes</span> <hr class="navHr">
-
+ -->
         
     
     <div class="topcontainer">
